# Royale_Predict

./: PCA.ipynb  README.md  building_dataset.ipynb  cluster_viewer.html  cxc.csv  deck_pca.html  decks_dataset.json  extracting_data.ipynb  pyproject.toml  testing.ipynb
archivio/: FIERO!.json
data/all/: #2002UCQURP.json  #202LYJYVJJ.json  #29QP2J88.json  #2GRC0YYJ.json  #2JQR8LR9Y.json  #2QGG9GJ80.json  #2QQRV0VQ.json  #808QQ0QV2.json  #9L9VPJC9U.json  #CCRQRJGYV.json  #CVCQG99VG.json  #GCPURVCR.json  #GJRVPLQGG.json  #J9UQQRL0G.json  #JL2G9P8.json  #JR90UCU2P.json  #JVUV8PJGC.json  #L9L8P080.json  #P9VVGJYLV.json  #QCC2GJ2GU.json  #RP9R9JRG.json  #RUGJCQL08.json  #U2VVU0LJ2.json  #UQ9PG2VPG.json  #V2VLCGQP8.json  #V8YVY8UG2.json  #VJU2GLQ28.json  #Y2C9YVRUJ.json  #YPP0YLQ.json  #YQCPY09UJ.json  #YYRCCPYLQ.json
data/mine/: #88V8GQU.json
decks/: deck_coords.csv  decks_clusters_legend.html
royale/: __init__.py  battlelog.py  card_clusters.json  cards.py  cards_dict.json
royale_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
